<resources>
    <string name="app_name">BasdatPBL</string>
    <string name="apk_nm">BasdatPBL</string>
    <string name="universitas">Universitas Negeri Malang</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="awal">Home</string>
    <string name="materi">Materi</string>
    <string name="kasus">Kasus</string>
    <string name="kuis">Kuis</string>
    <string name="info">Info</string>
    <string name="judul_hero">BasdatPBL</string>
    <string name="des_hero">Media pembelajaran Basis Data bermuatan Problem Based Learning untuk siswa SMK Kelas XI Kompetensi Keahlian Rekayasa Perangkat Lunak.</string>
    <string name="materi_hero">Materi yang dapat dipelajari dalam aplikasi ini</string>
    <string name="tujuan_hero">Tujuan dari pembelajaran melalui aplikasi ini</string>
    <string name="des_tujuan_hero">1. Mempermudah proses pembelajaran\n2. Meningkatkan efisiensi proses pembelajaran\n3. Melatih kemampuan <i>problem solving</i></string>
    <string name="kasus_hero">Kasus dalam aplikasi ini</string>
    <string name="des_kasus_hero">Kasus berisi soal-soal dengan menerapkan model pembelajaran <i>Problem Based Learning</i></string>
    <string name="judul_kuis">Kuis</string>
    <string name="des_kuis"> </string>
    <string name="judul_kasus">Kasus</string>
    <string name="des_kasus"> </string>
    <string name="informasi">Informasi</string>
    <string name="info_pengembang">Tri Rizki Herlambang\nS1 Pendidikan Teknik Informatika\nFakultas Teknik\nUniversitas Negeri Malang</string>
    <string name="info_des">Aplikasi ini dikembangkan untuk menunjang pembelajaran mata pelajaran Basis Data Kelas XI. Aplikasi ini dapat berjalan dengan baik dengan spesifikasi minimun smartphone sebagai berikut:</string>
    <string name="info_menu">
        a. Menu Pendahuluan / <i>Home</i>\n\t\tPada menu Pendahuluan berisi informasi tentang deskripsi mata pelajaran Basis Data, Kompetensi Dasar yang disajikan dalam aplikasi dan tujuan dari pembelajaran melalui aplikasi BasdatPBL.\n\n
        b. Menu Materi\n\t\tPada menu Materi berisi materi lengkap beserta vide pembelajaran yang disajikan dalam aplikasi, diantaranya:\n(1) Hirarki Basis Data\n(2) <i>Entity Relationship Diagram</i>\n(3) Ketergantungan Fungsional\n(4) Normalisasi Data\n\n
        c. Menu Kasus\n\t\tPada menu Kasus berisi soal dengan menerapkan model pembelajaran <i>Problem Based Learning</i>.\n\n
        d. Menu Kuis\n\t\tPada menu Kuis berisi pertanyaan untuk menguji tingkat pemahaman siswa terhadap materi. Tiap Kuis berisi 5 sampai dengan 10 soal.\n\n
        e. Menu Info\n\t\tPada menu Info berisi informasi tentang persyaratan minimum aplikasi, penjelasan menu, tata cara mengerjakan kasus, cara mengerjakan kuis dan informasi pengembang.
    </string>
    <string name="info_kasus">
        \t\tDalam aplikasi pembelajaran BasdatPBL terdapat menu kasus yang menyajikan soal dengan menggunakan model pembelajaran <i>Problem Based Learning</i>. Cara mengerjakan soal-soal di halaman kasus dengan cara mengikuti 5 tahap yang ada, yaitu\n
        1) Orientasi Masalah
    </string>
    <string name="info_kasus1">
        \t\tLangkah pertama dalam menyelesaikan kasus adalah mengetahui permasalahan dari sebuah kasus, pengguna pada tahap ini akan diberikan ilustrasi permasalahan dengan contoh gambar.\n\n
        2) Penentuan Masalah Pokok
    </string>
    <string name="info_kasus2">
        \t\tSetelah membaca ilustrasi dari tahap sebelumnya, pengguna diwajibkan memilih satu atau lebih pilihan masalah sesuai dengan pemahaman yang didapat setelah membaca ilustrasi. Jika masih belum memahami ilustrasi dari tahap sebelumnya, user bisa menekan tombol di kanan atas untuk melihat kembali ilustrasi permasalahan.\n\n
        3) Perencanaan Penyelesaian Masalah
    </string>
    <string name="info_kasus3">
        \t\tTahap ketiga adalah menentukan cara penyelesaian / solusi untuk menyelesaikan masalah yang sudah dipilih di tahap sebelumnya. Pada tahap ketiga ini, user dapat memilih jawaban lebih dari satu.\n\n
        4) Pelaksanaan Rencana
    </string>
    <string name="info_kasus4">
        \t\tPada tahap keempat ini, user akan menyampaikan hasil dari penyelesaian permmasalahan yang sebelumnya telah dipilih di awal. Penyampaian hasil pada tahap ini berupa pencocokan kata.\n\n
        5) Evaluasi
    </string>
    <string name="info_kasus5">
        \t\tTahap ini merupakan tahap terakhir dalam penyelesaian kasus. Pengguna akan mendapatkan evaluasi selama pemecahan kasus, evaluasi akan didapatkan di tahap penentuan masalah, perencanaan penyelesaian masalah, dan pelaksanaan rencana. Evaluasi yang didapatkan pengguna berupa saran tentang letak kesalahan ketika menyelesaikan kasus.
    </string>
    <string name="info_kuis">
        \t\tDalam menu Kuis menyajikan soal dengan model soal pilihan ganda. Terdapat empat pilihan kuis yang sesuai dengan banyaknya materi pokok yang terdapat dalam aplikasi BasdatPBL. Soal yang ditampilkan pada tiap Kuis berisi 5 hingga 10 soal.
    </string>
    <string name="info_kuis1">
        \t\tKetika selesai mengerjakan kuis, maka akan ditampilkan nilai seperti berikut.
    </string>
    <string name="penjelasan_menu">1. Penjelasan Menu</string>
    <string name="cara_mengerjakan_kasus">2. Cara Mengerjakan Kasus</string>
    <string name="cara_mengerjakan_kuis">3. Cara Mengerjakan Kuis</string>
    <string name="informasi_pengembang">4. Informasi Pengembang</string>
    <string name="deskripsiHirarki">Apa saja yang akan dipelajari dalam Bab ini:\n
        1. Definisi Basis Data\n
        2. <i>Database Management System</i>\n
        3. Struktur / Arsitektur Basis Data\n
        4. Skema / Abstraksi Data\n
        5. Model Basis Data</string>
    <string name="deskripsiErd">Apa saja yang akan dipelajari dalam Bab ini:\n
        1. Definisi <i>Entity Relationship Diagram</i>\n
        2. Entitas\n
        3. Atribut\n
        4. Relasi</string>
    <string name="prasyaratErd">Prasyarat :\n
        1. Memahami Struktur Hirarki Basis Data</string>
    <string name="deskripsiKetergantungan">Apa saja yang akan dipelajari dalam Bab ini:\n
        1. Definisi Ketergantungan Fungsional\n
        2. Ketergantungan Fungsional\n
        3. Ketergantungan Sepenuhnya\n
        4. Ketergantungan Sebagian\n
        5. Ketergantungan Penuh\n
        6. Ketergantungan Transitif
    </string>
    <string name="prasyaratKetergantungan">Prasyarat :\n
        1. Memahami Struktur Hirarki Basis Data\n
        2. Memahami Diagram Relasi Entitas</string>
    <string name="deskripsiNormalisasi">Apa saja yang akan dipelajari dalam Bab ini:\n
        1. Definisi Normalisasi\n
        2. Syarat bentuk normal pertama(1NF)\n
        3. Syarat bentuk normal kedua(2NF)\n
        4. Syarat bentuk normal ketiga(3NF)</string>
    <string name="prasyaratNormalisasi">Prasyarat :\n
        1. Memahami Struktur Hirarki Basis Data\n
        2. Memahami Diagram Relasi Entitas\n
        3. Memahami Ketergantungan Fungsional secara menyeluruh</string>
    <string name="definisiBasisData">Basis Data atau <i>Database</i> merupakan kumpulan data yang terorganisir, yang umumnya disimpan dan diakses secara elektronik dari suatu sistem komputer.</string>
    <string name="kecepatan"><b>Kecepatan</b>\n\nMudah dan cepat dalam melakukan penyimpanan, perubahan dan menampilkan kembali.</string>
    <string name="apa_itu_arsitektur_basis_data">Apa Itu Arsitektur Basis Data?</string>
    <string name="h1">Arsitektur basis data merupakan suatu kumpulan data yang tersimpan secara sistematik dimana user dapat melihat data dan bagaimana cara user melihat data tersebut.\n\Struktur basis data dijabarkan dalam gambar 1.2 berikut:</string>
    <string name="h21">Elemen (kolom atau <i>field</i>) data adalah satuan data terkecil yang tidak dapat dipecah lagi menjadi unit lain yang bermakna.\n\nKedudukan <i>field</i> dalam basis data dapat dilihat pada gambar 1.3\n\</string>
    <string name="h22">Rekaman (<i>record</i>) merupakan gabungan sejumlah elemen data yang saling terkait. Istilah lain dari <i>record</i> adalah baris atau tupel.\n\nKedudukan <i>record</i> dalam basis data dapat dilihat pada gambar 1.3</string>
    <string name="h23">Berkas (<i>file</i>) adalah himpunan seluruh <i>record</i> yang bertipe sama\n\nKedudukan <i>file</i> dalam basis data dapat dilihat pada gambar 1.3.</string>
    <string name="kf1">Dependensi fungsional merupakan keterkaitan antara dua atribut atau dua himpunan atribut.\n\n<b>Analogi</b>: terdapat sebuah relasi yang bernama R dengan dua buah atributnya berupa A dan B, sehingga Notasinya R(A,B) </string>
    <string name="kf3">Pada keadaan tersebut, atribut B dikatakan mempunyai dependensi fungsional terhadap A apabila setiap nilai A berhubungan dengan satu nilai yang sama pada B</string>
    <string name="kf31">Dari Tabel Barang diatas ini dapat dinotasikan seperti berikut\n1. KodeBarang -> NamaBarang\n2. KodeBarang -> HargaBarang\n3. KodeBarang -> KodePemasok\n4. KodeBarang -> NamaPemasok\n5. NamaBarang -> KodeBarang\n6. KodePemasok -> NamaPemasok\n7. NamaPemasok -> KodePemasok </string>
    <string name="kf32">Ketergantungan Fungsional diwakili dengan tanda panah seperti ini <b><![CDATA[->]]></b> \n\nPada Notasi KodeBarang -> NamaBarang\nSetiap KodeBarang pasti akan berhubungan dengan hanya sebuah NamaBarang.\n\nContoh: KodeBarang B-001 hanya akan cocok dengan satu NamaBarang yaitu Mirrorless ABV</string>
    <string name="kf33">Notasi singkat:\nKodeBarang -> {NamaBarang, HargaBarang, KodePemasok, NamaPemasok} </string>
    <string name="kf4">Sebuah atribut bisa bergantung pada lebih dari satu atribut\n\n<![CDATA[Notasi : {A,B,…} -> Z]]>\n\nAtribut Z mempunyai dependensi terhadap pasangan A dan B</string>
    <string name="kf41">Pada tabel Guru diatas, memiliki notasi\n\n{NIP, Pendidikan} -> TahunLulus\n\nJadi atribut NIP dan atribut Pendidikan mempengaruhi TahunLulus dari seorang guru </string>
    <string name="nt1">Suatu relasi disebut memenuhi bentuk normal ketiga (3NF) jika dan hanya jika\n1. Memenuhi bentuk normal kedua (2NF)\n2. Setiap atribut yang bukan kunci tidak tergantung secara fungsional terdahap atribut non-key yang lain dalam relasi tersebut (tidak terdapat ketergantungan transitif pada atribut non-key)</string>
    <string name="nt2">Contoh:\nTerdapat Tabel TPS yang memiliki atribut S, Status, City, P, Qty.\n\nMemiliki:\nKey\t: S + P\nFD\t\t: S -> Status\n\t\t\t\t\tS -> City\n\t\t\t\t\tCity -> Status</string>
    <string name="nt3">Untuk membuat normal bentuk ketiga (3NF) Tabel TPS diatas, maka perlu dilakukan normalisasi tahap pertama (1NF) dengan hasil berikut:</string>
    <string name="nt4">Tabel TPS sudah dalam tahap 1NF, namun masih terdapat masalah berupa:\n1. Redundansi\n2. Anomali, berupa penambahan record pada atribut <b>S, Status, City</b> yang harus menyertakan atribut P dan Q. Menghapus satu baris data juga akan merusak keutuhan informasi.\n\nMaka Solusi yang harus diambil adalah dekomposisi tabel menjadi TPS 1–1 dan TPS 1–2.</string>
    <string name="nt5"><![CDATA[Tabel TPS 1–1 dan TPS 1–2 sudah dalam bentuk 2NF, penambahan data kepada atribut S, Status, dan City bisa dilakukan dengan aman.\n\nTetapi masih ada anomaly: karena City –> Status, maka kita tidak bisa input data City baru sebelum Status punya nilai. Selain itu masih terdapat redundansi pada Status dan City.\n\nPada Tabel TPS 1–2 bisa dikatakan sudah dalam 3NF meskipun memiliki redundansi partial namun tidak memiliki potensi anomaly dan tabel TPS 1–2 lebih baik daripada bentuk tabel sebelumnya karena redundansi dapat diminimalisir.]]></string>
    <string name="nt6"><![CDATA[Pada Tabel TPS 1–1 masih dalam bentuk 2NF karena atribut City mempengaruhi Status (City –> Status) bukan S mempengaruhi Status, maka Tabel TPS 1–1 perlu didekomposisi kembali. Menghasilkan Tabel seperti dibawah ini.]]></string>
</resources>