<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_slider1"
    tools:context=".ui.materi.ketergantungan.Tabs2Ketergantungan">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:padding="8dp"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/kf1"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:padding="8dp"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/kf3"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:elevation="4dp"
                    android:background="@drawable/bg_white"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tabel 3.1 Barang"
                        android:textColor="@color/color_darkprime"
                        android:textSize="14sp"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/fungsional1"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:padding="8dp"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/kf31"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:padding="8dp"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/kf32"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:padding="8dp"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/kf33"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:padding="8dp"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/kf4"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:elevation="4dp"
                    android:background="@drawable/bg_white"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tabel 3.2 Guru"
                        android:textColor="@color/color_darkprime"
                        android:textSize="14sp"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_white"
                        android:src="@drawable/fungsional2"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:padding="8dp"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/kf41"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:textSize="32sp"
                    android:textColor="@color/color_darkprime" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>