<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_slider3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/nt1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/nt2"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white"
                    android:elevation="4dp"
                    android:padding="8dp"
                    android:src="@drawable/nf31"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/nt3"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white"
                    android:elevation="4dp"
                    android:padding="8dp"
                    android:src="@drawable/nf32"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/nt4"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white"
                    android:elevation="4dp"
                    android:padding="8dp"
                    android:src="@drawable/nf33"
                    tools:ignore="ContentDescription" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/nt5"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:padding="8dp"
                    android:lineSpacingMultiplier="1.5"
                    android:background="@drawable/bg_white"
                    android:elevation="4dp"
                    android:textSize="16sp"
                    android:textColor="@color/color_darkprime"
                    android:text="@string/nt6"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white"
                    android:elevation="4dp"
                    android:padding="8dp"
                    android:src="@drawable/nf34"
                    tools:ignore="ContentDescription" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:lineSpacingMultiplier="1.25"
                    android:textSize="32sp"
                    android:textColor="@color/color_darkprime" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>